<resources>
    <string name="app_name">Fisherman App</string>

    <string name="kepiting">Kepiting</string>
    <string name="harga">Harga</string>
    <string name="item">Item</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_item">Find item</string>
    <string name="img_item">Img Item</string>
    <string name="fisherman">Fisherman</string>
    <string name="login_first">Login First</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Register</string>
    <string name="create_account2">Create Account</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account? Login here!</string>
    <string name="detail_product">Detail Product</string>
    <string name="description">Description</string>
    <string name="profil">Profil</string>
    <string name="logout">LogOut</string>
    <string name="log_out">Log out</string>
    <string name="label_shipping_address">Alamat Pengiriman</string>
    <string name="label_hint_shipping_address">Masukan alamat pengiriman produk</string>
    <string name="checkout">Checkout</string>

    <string name="favorite" translatable="false">Favorite</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="product_description">Product Description</string>
    <string name="check_out" translatable="false">Check out</string>
    <string name="add_to_cart">Cart</string>
    <string name="buy">Buy</string>
    <string name="recipient_address">Recipient address</string>

    <string name="success">Success!</string>
    <string name="minus" translatable="false">-</string>
    <string name="_0" translatable="false">1</string>
    <string name="plus" translatable="false">+</string>
    <string name="fill_all_form">Please fill all form</string>
    <string name="fill_valid_form">Please enter valid address</string>
    <string name="no_data_found">No data found</string>
</resources>