<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:src="@drawable/fishing_login" />
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/bg_radius"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/login_first"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/edt_email_login"
            android:background="@drawable/form"
            android:drawableStart="@drawable/ic_person"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:paddingLeft="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/edt_pass_login"
            android:background="@drawable/form"
            android:drawableStart="@drawable/ic_key"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingLeft="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/forgot_password"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@drawable/form"
            android:textAllCaps="false"
            android:layout_gravity="center" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>